--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -16,4 +16,13 @@ en:
         "%B %d"
 
   titles:
-    application: Splash
+    application: Tinysplash
+
+  home:
+    company_name: Tinysplash
+    company_motto: Make big waves with a tiny splash
+    introduction: >
+     Create a free tinysplash page at yourdomain.tinysplash.io and start
+     collecting emails of potential customers. Tinysplash is also great for a/b
+     testing your company’s motto, validating your idea, and learning about your
+     target market.
