List of users' businesses shows on businesses/index view

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -50,6 +50,7 @@ en:
     unhappy: Unhappy?
 
   headers:
+    my_businesses: My Businesses
     cancel_account: Cancel your account
     edit_password: Change your password
     edit_registration: Update your account
