Add marketing page for '/tinysplash' route

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,6 +21,9 @@ en:
   home:
     company_name: Tinysplash
     company_motto: Make big waves with a tiny splash
+    company_selling_point: >
+      Make a free landing page to validate your idea, test price points, offer
+      rewards, and collect customers!
     introduction: >
      Create a free tinysplash page at yourdomain.tinysplash.io and start
      collecting emails of potential customers. Tinysplash is also great for a/b
